deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  namespace: auth
  labels:
    app: node
    name: node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: node
        label: server
    spec: # pod spec
      containers:
        - name: node
          image: munhunger/auth:server
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: auth
  labels:
    app: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate #it is locking the db so we need downtime
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: mongo
    spec: # pod spec
      volumes:
        - name: mongo-auth-pv
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: podinfo
          downwardAPI:
            items:
              - path: name
                fieldRef:
                  fieldPath: metadata.name
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/db"
              name: mongo-auth-pv
            - mountPath: "/etc/podinfo"
              name: podinfo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: auth
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: mongo-express
    spec: # pod spec
      containers:
        - name: mongo-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: auth
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      name: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: auth
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: mongo-express
---
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: auth
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: node
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - auth.munhunger.com
      secretName: auth-tls
  rules:
    - host: auth.munhunger.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node
                port:
                  number: 3000
